--- a/list.html
+++ b/list.html
@@ -9,7 +9,7 @@
     <h1>Все кандидаты</h1>
 
     {% for candidate in candidates %}
-        <p><a href="/candidates/{{ candidate.id }}">{{ candidate.name }}</a></p>
+        <p><a href="/candidates/{{ candidate.pk }}">{{ candidate.name }}</a></p>
     {% endfor %}
 
     </body>
