--- a/search.html
+++ b/search.html
@@ -9,7 +9,7 @@
     <h1>Найдено кандидатов: {{ count_candidates }}</h1>
 
     {% for candidate in candidates %}
-        <p><a href="/candidates/{{ candidate.id }}">{{ candidate.name }}</a></p>
+        <p><a href="/candidates/{{ candidate.pk }}">{{ candidate.name }}</a></p>
     {% endfor %}
 
     </body>
